// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineHelp test scripts Default slot test 1`] = `
<span
  class="fd-inline-help"
>
  <span
    class="fd-inline-help__content fd-inline-help__content--bottom-right"
  >
    Slot Text
  </span>
</span>
`;

exports[`InlineHelp test scripts Renders correctly 1`] = `
<span
  class="fd-inline-help"
>
  <span
    class="fd-inline-help__content fd-inline-help__content--bottom-right"
  />
</span>
`;
